Handle double close in main window

After a bug fix in Qt 5.14 we now get real close events for unclosed windows
when the application closes, so we would be getting two close events breaking
our logic when when to suppress on-close dialogs.

Suppress the real close event after we have handled our own simulated one. Also
works if there is no real close event.

BUG: 416728